In Shell32Wrapper, use a GUID data structure rather than a PointerBase